--- a/main.html
+++ b/main.html
@@ -2,11 +2,41 @@
 
 <html>
 
-<head>
+<head> 
+	<style>
+		.main container{
+			background-color:#f5f5f5;
+			padding:30px;
+		}
+		.testimonial{
+			padding:30px;
+			border:1px solid black;
+			background-color:#f5f5f5;
+			margin-bottom:30px;
+			}
+		.testimonial p{
+			margin:0;
+		}
+		author {
+        text-align:right;
+        font-style: italic;
+    }
+	</style>
+	<title>Testimonial Section</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<div class="main container">
+		<div class="testimonial">
+			<p class="text">This is product is amazing! I highly recomned it t anyone in need od a solution like this.</p>
+			<p class="author">-John Doe</p>
+		</div>
+		<div class="testimonial">
+			<p class="text">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+			<p class="author">-Jane Smith</p>
+		</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
