--- a/main.html
+++ b/main.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+	<h2>Testimonials</h2>
 	<div class="main container">
 		<div class="testimonial">
 			<p class="text">This is product is amazing! I highly recomned it t anyone in need od a solution like this.</p>
